--- a/tex/schemas/flow.tex
+++ b/tex/schemas/flow.tex
@@ -1,21 +1,23 @@
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
-    \clip(-4.06,1.96) rectangle (6.05,6.09);
-    \draw (-4,6)-- (6,6);
-    \draw (-4,2)-- (6,2);
-    \draw (0,6)-- (0,2);
-    \draw (2,6)-- (2,2);
-    \draw (-4,4)-- (0,4);
-    \draw (-1.9,4) -- (-2,3.88);
-    \draw (-1.9,4) -- (-2,4.12);
-    \draw (2,4)-- (6,4);
-    \draw (4.1,4) -- (4,3.88);
-    \draw (4.1,4) -- (4,4.12);
-    \begin{scriptsize}
-        \fill [color=black] (0,4) circle (1.5pt);
-        \draw[color=black] (0.18,4.23) node {$\xi$};
-        \draw[color=black] (-1.61,4.25) node {j($\xi$,t)};
-        \fill [color=black] (2,4) circle (1.5pt);
-        \draw[color=black] (2.72,4.23) node {$\xi + \Delta\xi$};
-        \draw[color=black] (5.03,4.29) node {j($\xi + \Delta\xi$,t)};
-    \end{scriptsize}
-\end{tikzpicture}
+%Uncomment next line if XeTeX is used
+%\def\pgfsysdriver{pgfsys-xetex.def}
+\baselineskip=10pt
+\hsize=6.3truein
+\vsize=8.7truein
+\tikzpicture[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm,scale=0.7]
+\clip(-1,-5.04) rectangle (19.62,6.3);
+\draw (2,-2)-- (14,-2);
+\draw (2,2)-- (14,2);
+\draw (6,2)-- (6,-2);
+\draw (10,2)-- (10,-2);
+\draw [->] (2,0) -- (6,0);
+\draw [->] (10,0) -- (14,0);
+\draw [->] (8,0) -- (8,4);
+\fill [color=black] (6,-2) circle (1.5pt);
+\draw[color=black] (5.96,-2.28) node {$\xi$};
+\fill [color=black] (10,-2) circle (1.5pt);
+\draw[color=black] (10.7,-2.28) node {$\xi+\Delta\xi$};
+\draw[color=black] (4.32,0.22) node {j($\xi$,t)};
+\draw[color=black] (12.5,0.24) node {j($\xi+\Delta\xi$,t)};
+\draw[color=black] (8.82,2.72) node {i(x,t)};
+\endtikzpicture
+
